--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,9 @@
 .container-fluid {
   height: calc(100vh - 56px);
+  background-color: rgb(253, 253, 252);
 
   > .row {
     height: 100%;
+    //background-color: lawngreen;
   }
 }
