--- a/src/app/pages/details/components/daily-weather/daily-weather.component.scss
+++ b/src/app/pages/details/components/daily-weather/daily-weather.component.scss
@@ -3,6 +3,8 @@
   padding: 8px;
   display: flex;
   flex-direction: column;
+  background-color: rgb(201, 199, 199);
+  //background-color: rgb(236, 236, 236);
 
   > span {
     width: fit-content;
@@ -14,6 +16,7 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-column-gap: 8px;
     align-items: center;
+    
 
     > div {
       display: flex;
