--- a/src/app/pages/details/containers/details/details.page.scss
+++ b/src/app/pages/details/containers/details/details.page.scss
@@ -1,8 +1,10 @@
 .container-fluid {
   margin: 0 0 16px 0;
   padding: 32px 0 0;
+  
 
   .current-card {
     padding: 16px;
+    background-color: rgb(138, 124, 131);
   }
 }
