--- a/src/app/pages/home/containers/home/home.page.scss
+++ b/src/app/pages/home/containers/home/home.page.scss
@@ -1,6 +1,7 @@
 .container-fluid {
   margin: 0;
   padding: 32px 0 0;
+  //background-color: khaki;
 
   .search-container {
     display: grid;
@@ -9,6 +10,7 @@
 
     > div {
       width: 100%;
+      //background-color: lawngreen;
 
       > div {
         display: flex;
@@ -16,6 +18,7 @@
         > .form-control {
           margin-right: 8px;
           flex-grow: 1;
+          //background-color: lightgreen;
         }
       }
     }
